# logsmith

./: README.md  pyproject.toml
.github/workflows/: ci.yml
logsmith/: analysis.py  cli.py  parsers.py  report.py  search.py
